# museum_exbition

./: .gitignore  LICENSE  alembic.ini  pyproject.toml  readme.md
docker/: Dockerfile  docker-compose.yaml  nginx.conf  runbuild.sh
exb-wx/: app.js  app.json  app.wxss  project.config.json  project.private.config.json
exb-wx/config/: env.dev.js  env.prod.js  env.test.js  index.js
exb-wx/styles/: iconfont.wxss
exb-wx/utils/: api.js  audioManager.js  sha256.js
exb_ai/controller/: screenshot.py
exb_museum/controller/: activity_controller.py  collection_controller.py  exhibition_controller.py  exhibition_unit_controller.py  museum_controller.py  museum_hall_controller.py  museum_media_controller.py  museum_wx_controller.py
exb_museum/domain/: __init__.py
exb_museum/mapper/: __init__.py  activity_mapper.py  activity_reservation_mapper.py  collection_mapper.py  exhibition_mapper.py  exhibition_unit_mapper.py  museum_hall_mapper.py  museum_mapper.py  museum_media_mapper.py  (+1 more)
migrations/: README.md  env.py
ruoyi-ui/: .env.development  .env.production  .env.staging  README.md  package.json  pnpm-lock.yaml  vue.config.js
ruoyi_admin/: __init__.py  app.py  ext.py
ruoyi_apscheduler/: __init__.py  config.py  constant.py  util.py
ruoyi_common/: __init__.py  config.py  constant.py  exception.py
ruoyi_exb/: __init__.py
ruoyi_framework/: __init__.py  config.py
ruoyi_generator/: BUG_FIXES.md  CODE_GENERATOR_FEATURES.md  README.md  __init__.py  config.py  constant.py  ruoyi_generator.py  util.py
ruoyi_system/: __init__.py
sql/: ruoyi2owl.sql  ry_20230706.sql
(+257 files in other folders)
