[project]
name = "ruoyi-vue-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "apscheduler==3.10.4",
    "bcrypt==4.2.0",
    "blinker==1.8.2",
    "captcha==0.6.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "croniter==5.0.1",
    "et-xmlfile==2.0.0",
    "flask==3.0.3",
    "flask-cors==5.0.0",
    "flask-login==0.6.3",
    "flask-redis==0.4.0",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.1.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "markupsafe==3.0.2",
    "openpyxl==3.1.5",
    "pillow==11.0.0",
    "psutil==6.1.0",
    "pydantic==2.10.3",
    "pydantic-core==2.27.1",
    "pyjwt==2.10.1",
    "pymysql==1.1.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "redis==5.2.1",
    "six==1.17.0",
    "sqlalchemy==2.0.36",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "tzlocal==5.2",
    "werkzeug==3.1.3",
    "playwright==1.56.0",
    "markdownify>=1.2.2",
    "pandas>=2.3.3",
    "python-calamine>=0.6.1",
    "alembic>=1.17.2",
    "dashscope>=1.25.5",
    "python-dotenv>=1.2.1",
    "minio>=7.2.20",
    "ffmpeg-python>=0.2.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
